--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=ENC(51xhCI5+B+AODSmKaTJnakMW98ZojSZBX/WHS45AfouUc/ekx
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# Logging Configuration
+logging.level.root=info
+logging.file.name=logs/house-keeper-api.log
